# gofra

./: .gitignore  404.html  CNAME  README.md  grammar.ebnf  index.html  mkdocs.yml  pyproject.toml  run-acceptance.sh  test  test.gof
advanced/: index.html
docs/: editors.md  index.md  installation.md
editors/: index.html
examples/: 01_hello_world.gof  02_cat.gof  02_fib.gof  02_input.gof  02_raylib_graphics.gof  03_network_socket.gof  03_pong.gof  03_raylib_graphics.gof  04_cat.gof  04_fib.gof  04_http_server.gof  05_http_server.gof
ffi/: index.html
gofra/: __init__.py  __main__.py  context.py  executable.py  feature_flags.py  gofra.py
installation/: index.html
lib/: _cpu.gof  assert.gof  ffi.gof  math.gof  memory.gof  random.gof  std.gof  string.gof  types.gof
libgofra/: __init__.py  exceptions.py  feature_flags.py  gofra.py  import_path_resolver.py
linker/: index.html
overview/: index.html
pages/: index.html
scripts/: __init__.py  build.py  entrypoint-alias.py  macos_syscall_extractor.py  run_acceptance_tests.sh  run_optimizer_tests.sh  syscall_extractor.py
search/: search_index.json
sitemap/: index.html
tests/: .gitignore  test_abi_stack_spill_arguments.gof  test_align_of.gof  test_array_character_word.gof  test_array_global_single_element.gof  test_array_local_massive_blob.gof  test_array_local_massive_shift.gof  test_array_local_single_element.gof  test_boolean_logic_operators.gof  test_booleans.gof  test_call_pointer_of_proc.gof  test_call_stack_hierarchy.gof  test_characters_as_integer.gof  test_chars.gof  test_cstring_len.gof  (+34 more)
(+592 files in other folders)
