[project]
name = "gofra"
version = "0.0.5"
description = "A Stack-based compiled programming language"
requires-python = ">=3.12,<4.0"
license = "MIT"
readme = "README.md"
authors = [{ name = "Kirill Zhosul", email = "kirillzhosul@yandex.com" }]
maintainers = []
keywords = ["compiler", "language"]

[project.scripts]
gofra = "gofra.__main__:cli_entry_point"
gofra-ld = "gofra.linker.__main__:main"
gofra-testkit = "gofra.testkit.__main__:main"

[project.urls]
documentation = "https://kirillzhosul.github.io/gofra"
repository = "https://github.com/kirillzhosul/gofra"

[tool.poetry]
package-mode = true
packages = [{ include = "gofra" }]
include = ["gofra/_distlib/**/*.gof"]
exclude = ["gofra/testkit"]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
pytest = "^9.0.1"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",
    "A005",
    "D105",
    "D100",
    "D103",
    "PLR0912",
    "PLR0915",
    "C901",
    "D107",
    "D101",
    "D102",
    "W291",
    "E501",
    "UP031",
    "T201",
    "S603",
    "D203",
    "D213",
    "FIX002",  # do not warn on TODOs
    "TD003",   # do not warn on TODOs
    "PLR2004", # We often use something like 8/16 bytes and mostly this is relevant for us
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
